--- a/components/tachart/demo/stateseries/stateseries_demo.lpi
+++ b/components/tachart/demo/stateseries/stateseries_demo.lpi
@@ -48,6 +48,7 @@
         <Filename Value="uganttframe.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="GanttFrame"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="uGanttFrame"/>
       </Unit>
@@ -55,8 +56,14 @@
         <Filename Value="umachinestateframe.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="MachineStateFrame"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="uMachineStateFrame"/>
+      </Unit>
+      <Unit>
+        <Filename Value="uganttdata.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="uGanttData"/>
       </Unit>
     </Units>
   </ProjectOptions>
@@ -74,7 +81,17 @@
       <Debugging>
         <DebugInfoType Value="dsDwarf3"/>
       </Debugging>
+      <Options>
+        <Win32>
+          <GraphicApplication Value="True"/>
+        </Win32>
+      </Options>
     </Linking>
+    <Other>
+      <CompilerMessages>
+        <IgnoredMessages idx6058="True"/>
+      </CompilerMessages>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions>
