TAChart: Add a simpler demo for a Gantt chart to the TStateSeries sample project.

--- a/components/tachart/demo/stateseries/stateseries_demo.lpi
+++ b/components/tachart/demo/stateseries/stateseries_demo.lpi
@@ -65,6 +65,14 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="uGanttData"/>
       </Unit>
+      <Unit>
+        <Filename Value="usimpleganttframe.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="SimpleGanttFrame"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="uSimpleGanttFrame"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
