--- a/components/tachart/demo/axistransf/axistransfdemo.lpi
+++ b/components/tachart/demo/axistransf/axistransfdemo.lpi
@@ -81,6 +81,9 @@
       <SmartLinkUnit Value="True"/>
     </CodeGeneration>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <LinkSmart Value="True"/>
       <Options>
         <Win32>
