--- a/components/tachart/demo/dragdrop/dragdropdemo.lpi
+++ b/components/tachart/demo/dragdrop/dragdropdemo.lpi
@@ -6,12 +6,14 @@
     <General>
       <Flags>
         <SaveClosedFiles Value="False"/>
+        <MainUnitHasCreateFormStatements Value="False"/>
+        <MainUnitHasTitleStatement Value="False"/>
+        <MainUnitHasScaledStatement Value="False"/>
         <LRSInOutputDirectory Value="False"/>
         <CompatibilityMode Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="Chart mouse events demo"/>
-      <Scaled Value="True"/>
+      <Title Value="TAChart Mouse Events Demo"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <XPManifest>
@@ -50,7 +52,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="4">
       <Unit0>
         <Filename Value="dragdropdemo.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -58,11 +60,25 @@
       <Unit1>
         <Filename Value="main.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="MainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Main"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="frmpoints.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="PointsFrame"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="frmPoints"/>
+      </Unit2>
+      <Unit3>
+        <Filename Value="frmbars.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="BarsFrame"/>
+        <ResourceBaseClass Value="Frame"/>
+        <UnitName Value="frmBars"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -72,12 +88,10 @@
       <IncludeFiles Value="$(ProjOutDir)"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
-    <Parsing>
-      <SyntaxOptions>
-        <UseAnsiStrings Value="False"/>
-      </SyntaxOptions>
-    </Parsing>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
