--- a/components/lazedit/Makefile.fpc
+++ b/components/lazedit/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for LazEdit 1.0
 #
-#   This file was generated on 12-9-23
+#   This file was generated on 06/04/2025
 
 [package]
 name=lazedit
@@ -10,7 +10,7 @@ version=1.0
 
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
-unitdir=. ../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET)
+unitdir=. ../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../freetype/lib/$(CPU_TARGET)-$(OS_TARGET) ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)
 options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq $(DBG_OPTIONS)
 
 [target]
