TAChart: Improved drawing of broken lines (TEnhancedChartPen.EnhancedBrokenLines)

--- a/components/tachart/demo/nogui/noguidemo.lpi
+++ b/components/tachart/demo/nogui/noguidemo.lpi
@@ -63,6 +63,7 @@
     </SearchPaths>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <UseExternalDbgSyms Value="True"/>
       </Debugging>
       <Options>
