--- a/components/tachart/demo/func/funcdemo.lpi
+++ b/components/tachart/demo/func/funcdemo.lpi
@@ -98,6 +98,7 @@
         <Filename Value="frmparametric.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="ParametricFrame"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="frmParametric"/>
       </Unit6>
@@ -105,6 +106,7 @@
         <Filename Value="frmexpression.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="ExpressionFrame"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="frmExpression"/>
       </Unit7>
